# compendium

./: .env  .gitignore  Cargo.toml
migrations/2020-11-15-064224_create_playbook/: down.sql  up.sql
src/: database.rs  main.rs  route.rs  schema.rs
src/error/: mod.rs
src/playbook/: create.rs  dao.rs  delete.rs  list.rs  mod.rs  model.rs  read.rs
src/playbook/model/: mod.rs  playbook.rs
src/shared/: input.rs
