[package]
name = "compendium"
version = "0.1.0"
authors = ["erickosamudera <ericko.samudera@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
diesel = { version = "1.4.4", features = ["sqlite"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
dotenv = "0.15.0"
derive_more = "0.99.0"